--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,30 +12,47 @@ repository = "https://github.com/zakarumych/goods"
 [features]
 std = []
 fs = ["std"]
+sync = ["spin"]
+fetch = ["js-sys", "web-sys/Response", "web-sys/Window", "wasm-bindgen", "wasm-bindgen-futures"]
 
 json-format = ["serde", "serde_json"]
 yaml-format = ["serde", "serde_yaml"]
 ron-format = ["serde", "ron"]
 
+default = ["sync"]
+
 [dependencies]
 futures-core = { version = "0.3", default-features = false, features = ["alloc"] }
-spin = "0.5"
-log = { version = "0.4", default-features = false }
+log = { version = "0.4", default-features = false, features = ["max_level_trace", "release_max_level_trace"] }
 pin-utils = { version = "0.1.0-alpha.4", default-features = false }
 hashbrown = { version = "0.7" }
+spin = { version = "0.5", optional = true }
 
 serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
 serde_json = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }
 serde_yaml = { version = "0.8", optional = true, default-features = false }
 ron = { version = "0.5", optional = true, default-features = false }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 reqwest = { version = "0.10", optional = true, default-features = false }
 
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+web-sys = { version = "=0.3.39", optional = true }
+js-sys = { version = "=0.3.39", optional = true }
+wasm-bindgen = { version = "=0.2.62", optional = true }
+wasm-bindgen-futures = { version = "=0.4.12", optional = true }
+
 [dev-dependencies]
-env_logger = "0.7"
 thiserror = "1.0"
-tokio = { version = "0.2", features = ["rt-core", "macros"] }
 futures-task = { version = "0.3" }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
+env_logger = "0.7"
+tokio = { version = "0.2", features = ["rt-core", "macros"] }
 legion = "0.2"
+
+[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
+console_log = "0.2.0"
 
 [[example]]
 name = "fs"
@@ -48,3 +65,8 @@ required-features = ["reqwest", "json-format"]
 [[example]]
 name = "legion"
 required-features = ["ron-format"]
+
+[[example]]
+name = "fetch"
+required-features = ["fetch", "json-format", "yaml-format"]
+crate-type = ["cdylib"]
