--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,10 +38,10 @@ ron = { version = "0.5", optional = true, default-features = false }
 reqwest = { version = "0.10", optional = true, default-features = false }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-web-sys = { version = "=0.3.39", optional = true }
-js-sys = { version = "=0.3.39", optional = true }
-wasm-bindgen = { version = "=0.2.62", optional = true }
-wasm-bindgen-futures = { version = "=0.4.12", optional = true }
+web-sys = { version = "0.3.39", optional = true }
+js-sys = { version = "0.3.39", optional = true }
+wasm-bindgen = { version = "0.2.62", optional = true }
+wasm-bindgen-futures = { version = "0.4.12", optional = true }
 
 [dev-dependencies]
 thiserror = "1.0"
