--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,10 @@ jobs:
         os: [ubuntu-latest, windows-latest, macOS-latest]
     steps:
     - uses: actions/checkout@v2
+    - name: Install stable
+      run: rustup install stable && rustup update stable
+    - name: Install nightly
+      run: rustup install nightly && rustup update nightly
     - name: Build
       run: cargo build --verbose
     - name: Run tests
