--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,6 +21,8 @@ jobs:
       run: rustup install stable && rustup update stable
     - name: Install nightly
       run: rustup install nightly && rustup update nightly
+    - name: Install wasm
+      run: rustup target install wasm32-unknown-unknown
     - name: Build
       run: cargo build --verbose
     - name: Run tests
