--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,10 @@ jobs:
         os: [ubuntu-latest, windows-latest, macOS-latest]
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+        with:
+          python-version: '3.7'
+          architecture: 'x64'
     - name: Install stable
       run: rustup install stable && rustup update stable && rustup +stable target install wasm32-unknown-unknown
     - name: Install nightly
@@ -26,4 +30,4 @@ jobs:
     - name: Run tests
       run: cargo test --verbose
     - name: Check all permutations
-      run: python3 check.py
+      run: python check.py
