--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ readme = "README.md"
 unstable-doc = []
 std = []
 fs = ["std"]
-sync = ["spin"]
+sync = ["maybe-sync/sync"]
 fetch = ["js-sys", "web-sys/Response", "web-sys/Window", "wasm-bindgen", "wasm-bindgen-futures"]
 
 json-format = ["serde", "serde_json"]
@@ -45,6 +45,8 @@ serde = { version = "1.0", optional = true, default-features = false, features =
 serde_json = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }
 serde_yaml = { version = "0.8", optional = true, default-features = false }
 ron = { version = "0.5", optional = true, default-features = false }
+
+maybe-sync = "0.1"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 reqwest = { version = "0.10", optional = true, default-features = false }
