--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,7 +19,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
-        python-version: '3.7'
+        python-version: '3.8.*'
         architecture: 'x64'
     - name: Install stable
       run: rustup install stable && rustup update stable && rustup +stable target install wasm32-unknown-unknown
@@ -30,4 +30,5 @@ jobs:
     - name: Run tests
       run: cargo test --verbose
     - name: Check all permutations
+      if: ${{ matrix.os != 'windows-latest' }}
       run: python check.py
