--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,7 +19,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Install nightly toolchain with clippy available
+    - name: Install ${{ matrix.rust-toolchain }} toolchain
       uses: actions-rs/toolchain@v1
       with:
         profile: minimal
@@ -49,7 +49,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Install nightly toolchain with clippy available
+    - name: Install ${{ matrix.rust-toolchain }} toolchain
       uses: actions-rs/toolchain@v1
       with:
         profile: minimal
