Refactoring to remove maybe-sync

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,16 +12,15 @@ readme = "README.md"
 
 [features]
 unstable-doc = []
-std = []
+std = ["parking_lot"]
 fs = ["std"]
-sync = ["maybe-sync/sync"]
 fetch = ["js-sys", "web-sys/Response", "web-sys/Window", "wasm-bindgen", "wasm-bindgen-futures"]
 
 json-format = ["serde", "serde_json"]
-yaml-format = ["serde", "serde_yaml", "std"]
-ron-format = ["serde", "ron", "std"]
+yaml-format = ["serde", "serde_yaml"]
+ron-format = ["serde", "ron"]
 
-default = ["std", "sync"]
+default = ["std"]
 
 reqwest-default-tls = ["reqwest/default-tls"]
 reqwest-native-tls = ["reqwest/native-tls"]
@@ -29,35 +28,38 @@ reqwest-rustls-tls = ["reqwest/rustls-tls"]
 
 futures-spawn = ["futures-task", "futures-util"]
 wasm-bindgen-spawn = ["wasm-bindgen-futures"]
-tokio-spawn = ["tokio/rt-core", "sync"]
+tokio-spawn = ["tokio/rt-core"]
+
+trace = ["tracing", "tracing-futures"]
 
 [dependencies]
 futures-core = { version = "0.3", default-features = false, features = ["alloc"] }
 futures-task = { version = "0.3", default-features = false, optional = true }
 futures-util = { version = "0.3", default-features = false, features = ["alloc"], optional = true }
 
-log = { version = "0.4", default-features = false }
+tracing = { version = "0.1", default-features = false, features = ["attributes"], optional = true }
+tracing-futures = { version = "0.2", default-features = false, features = ["std-future"], optional = true }
 hashbrown = { version = "0.7" }
 
 serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
 serde_json = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }
 serde_yaml = { version = "0.8", optional = true, default-features = false }
-ron = { version = "0.5", optional = true, default-features = false }
-
-maybe-sync = "0.1"
+ron = { version = "0.6", optional = true, default-features = false }
+parking_lot = { version = "0.11", optional = true }
+spin = "0.5"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 reqwest = { version = "0.10", optional = true, default-features = false }
 tokio = { version = "0.2", optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-web-sys = { version = "0.3.39", optional = true }
-js-sys = { version = "0.3.39", optional = true }
-wasm-bindgen = { version = "0.2.62", optional = true }
-wasm-bindgen-futures = { version = "0.4.12", optional = true }
+web-sys = { version = "=0.3.42", optional = true }
+js-sys = { version = "=0.3.42", optional = true }
+wasm-bindgen = { version = "0.2.65", optional = true }
+wasm-bindgen-futures = { version = "0.4.15", optional = true }
 
 [dev-dependencies]
-thiserror = "1.0"
+log = "0.4"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 env_logger = "0.7"
@@ -66,7 +68,7 @@ futures-executor = { version = "0.3", features = ["thread-pool"] }
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 console_log = "0.2.0"
-web-sys = { version = "0.3.39", features = ["Document", "Text", "HtmlElement", "Node"] }
+web-sys = { version = "0.3.42", features = ["Document", "Text", "HtmlElement", "Node"] }
 
 [[example]]
 name = "fs"
