--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "goods"
-version = "0.7.0"
+version = "0.7.1"
 authors = ["zakarumych"]
 edition = "2018"
 description = "Asset manager for good assets"
@@ -29,6 +29,7 @@ reqwest-rustls-tls = ["reqwest/rustls-tls"]
 futures-spawn = ["futures-task", "futures-util"]
 wasm-bindgen-spawn = ["wasm-bindgen-futures"]
 tokio-spawn = ["tokio/rt"]
+smol-spawn = ["smol"]
 
 trace = ["tracing", "tracing-futures"]
 data-url = ["base64"]
@@ -46,7 +47,6 @@ serde = { version = "1.0", optional = true, default-features = false, features =
 serde_json = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }
 serde_yaml = { version = "0.8", optional = true, default-features = false }
 ron = { version = "0.6", optional = true, default-features = false }
-parking_lot = { version = "0.11", optional = true }
 spin = "0.7"
 base64 = { version = "0.13", optional = true }
 urlencoding = { version = "1.1", optional = true }
@@ -54,6 +54,8 @@ urlencoding = { version = "1.1", optional = true }
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 reqwest = { version = "0.11", optional = true, default-features = false }
 tokio = { version = "1.0", optional = true }
+smol = { version = "1.0", optional = true }
+parking_lot = { version = "0.11", optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 web-sys = { version = "=0.3.47", optional = true }
