--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,108 +1,2 @@
-[package]
-name = "goods"
-version = "0.7.1"
-authors = ["zakarumych"]
-edition = "2018"
-description = "Asset manager for good assets"
-license = "MIT OR Apache-2.0"
-documentation = "https://docs.rs/goods"
-keywords = ["assets", "no_std", "async", "wasm", "web"]
-repository = "https://github.com/zakarumych/goods"
-readme = "README.md"
-
-[features]
-unstable-doc = []
-std = ["parking_lot"]
-fs = ["std"]
-fetch = ["js-sys", "web-sys/Response", "web-sys/Window", "wasm-bindgen", "wasm-bindgen-futures"]
-
-json-format = ["serde", "serde_json"]
-yaml-format = ["serde", "serde_yaml"]
-ron-format = ["serde", "ron"]
-
-default = ["std"]
-
-reqwest-default-tls = ["reqwest/default-tls"]
-reqwest-native-tls = ["reqwest/native-tls"]
-reqwest-rustls-tls = ["reqwest/rustls-tls"]
-
-futures-spawn = ["futures-task", "futures-util"]
-wasm-bindgen-spawn = ["wasm-bindgen-futures"]
-tokio-spawn = ["tokio/rt"]
-smol-spawn = ["smol"]
-
-trace = ["tracing", "tracing-futures"]
-data-url = ["base64"]
-
-[dependencies]
-futures-core = { version = "0.3", default-features = false, features = ["alloc"] }
-futures-task = { version = "0.3", default-features = false, optional = true }
-futures-util = { version = "0.3", default-features = false, features = ["alloc"], optional = true }
-
-tracing = { version = "0.1", default-features = false, features = ["attributes"], optional = true }
-tracing-futures = { version = "0.2", default-features = false, features = ["std-future"], optional = true }
-hashbrown = { version = "0.9" }
-
-serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
-serde_json = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }
-serde_yaml = { version = "0.8", optional = true, default-features = false }
-ron = { version = "0.6", optional = true, default-features = false }
-spin = "0.7"
-base64 = { version = "0.13", optional = true }
-urlencoding = { version = "1.1", optional = true }
-
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-reqwest = { version = "0.11", optional = true, default-features = false }
-tokio = { version = "1.0", optional = true }
-smol = { version = "1.0", optional = true }
-parking_lot = { version = "0.11", optional = true }
-
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-web-sys = { version = "=0.3.47", optional = true }
-js-sys = { version = "=0.3.47", optional = true }
-wasm-bindgen = { version = "0.2.65", optional = true }
-wasm-bindgen-futures = { version = "0.4.15", optional = true }
-
-[dev-dependencies]
-tracing = "0.1"
-
-[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
-tokio = { version = "1.0", features = ["rt", "macros"] }
-tracing-subscriber = { version = "0.2" }
-futures-executor = { version = "0.3", features = ["thread-pool"] }
-
-[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
-tracing-wasm = "0.1"
-web-sys = { version = "0.3.42", features = ["Document", "Text", "HtmlElement", "Node"] }
-
-[[example]]
-name = "fs"
-required-features = ["fs", "json-format", "yaml-format", "futures-spawn"]
-
-[[example]]
-name = "dataurl"
-required-features = ["data-url", "json-format", "yaml-format", "futures-spawn", "base64"]
-
-[[example]]
-name = "reqwest"
-required-features = ["reqwest", "json-format", "yaml-format", "tokio-spawn", "reqwest-default-tls"]
-
-[[example]]
-name = "fetch"
-required-features = ["fetch", "json-format", "yaml-format", "wasm-bindgen-spawn"]
-crate-type = ["cdylib"]
-
-[package.metadata.docs.rs]
-no-default-features = true
-features = ["std", "fs", "reqwest", "fetch", "json-format", "yaml-format", "ron-format", "unstable-doc"]
-
-targets = [
-    "i686-pc-windows-gnu",
-    "i686-pc-windows-msvc",
-    "i686-unknown-linux-gnu",
-    "x86_64-apple-darwin",
-    "x86_64-pc-windows-gnu",
-    "x86_64-pc-windows-msvc",
-    "x86_64-unknown-linux-gnu",
-    "wasm32-unknown-unknown",
-]
+[workspace]
+members = ["goods", "json", "ron", "yaml", "fs", "dataurl", "reqwest", "fetch", "examples"]
