--- a/goods/Cargo.toml
+++ b/goods/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT OR Apache-2.0"
 documentation = "https://docs.rs/goods"
 keywords = ["assets", "no_std", "async", "wasm", "web"]
 repository = "https://github.com/zakarumych/goods"
-readme = "README.md"
+readme = "../README.md"
 
 [features]
 trace = ["tracing", "tracing-futures"]
