Fix license in goods-yaml

--- a/yaml/Cargo.toml
+++ b/yaml/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Zakarum <zakarumych@ya.ru>"]
 edition = "2018"
 description = "JSON format for 'goods' asset manager"
-license = "YAML OR Apache-2.0"
+license = "MIT OR Apache-2.0"
 documentation = "https://docs.rs/goods-yaml"
 keywords = ["assets", "async"]
 repository = "https://github.com/zakarumych/goods-yaml"
