Added loader adapted from arcana engine

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "relictl"
+name = "goods-cli"
 version = "0.1.0"
 authors = ["Zakarum <zakarumych@ya.ru>"]
 edition = "2018"
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reliquary = { version = "=0.1.0", path = ".." }
+goods = { version = "0.9.0", path = ".." }
 clap = "3.0.0-beta.2"
 tracing = "0.1"
 tracing-error = "0.1"
