--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ goods-import = { version = "=0.1.0", path = "import" }
 tracing = { version = "0.1", features = ["attributes"] }
 uuid = { version = "0.8", features = ["v4", "serde"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
+serde_json = "1.0"
 bincode = "1.0"
 thiserror = "1.0"
 dlopen = "0.1"
