--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 authors = ["Zakarum <zakarumych@ya.ru>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "goods"
+path = "src/main.rs"
 
 [dependencies]
 goods = { version = "0.9.0", path = ".." }
