--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
-name = "goods"
-version = "0.9.0"
+name = "treasury"
+version = "0.1.0"
 edition = "2018"
 authors = ["Zakarum <zakarumych@ya.ru>"]
 license = "MIT OR Apache-2.0"
-documentation = "https://docs.rs/goods"
-homepage = "https://github.com/zaq/goods"
-repository = "https://github.com/zaq/goods"
+documentation = "https://docs.rs/treasury"
+homepage = "https://github.com/zaq/treasury"
+repository = "https://github.com/zaq/treasury"
 
 [dependencies]
-goods-import = { version = "=0.1.0", path = "import" }
+treasury-import = { version = "=0.1.0", path = "import" }
 tracing = { version = "0.1", features = ["attributes"] }
 uuid = { version = "0.8", features = ["v4", "serde"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
@@ -20,4 +20,4 @@ dlopen = "0.1"
 eyre = "0.6"
 
 [workspace]
-members = ["dummy", "cli", "loader", "sources"]
+members = ["dummy", "cli", "goods"]
