--- a/goods/Cargo.toml
+++ b/goods/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
-name = "goods-loader"
-version = "0.1.0"
+name = "goods"
+version = "0.9.0"
 authors = ["Zakarum <zakarumych@ya.ru>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+treasury = { version = "0.1.0", path = ".." }
 uuid = "0.8"
 thiserror = "1.0"
 serde = "1.0"
