--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,26 @@
 [package]
-name = "treasury"
-version = "0.1.0"
-edition = "2018"
+name = "goods"
+version = "0.9.0"
 authors = ["Zakarum <zakarumych@ya.ru>"]
-license = "MIT OR Apache-2.0"
-documentation = "https://docs.rs/treasury"
-homepage = "https://github.com/zaq/treasury"
-repository = "https://github.com/zaq/treasury"
+edition = "2018"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-treasury-import = { version = "=0.1.0", path = "import" }
-tracing = { version = "0.1", features = ["attributes"] }
-uuid = { version = "0.8", features = ["v4", "serde"] }
-serde = { version = "1.0", features = ["derive", "rc"] }
-serde_json = "1.0"
-bincode = "1.0"
+treasury = { version = "0.1.0", path = "treasury" }
+uuid = "0.8"
 thiserror = "1.0"
-dlopen = "0.1"
-eyre = "0.6"
+serde = "1.0"
+serde_json = "1.0"
+ron = "0.6"
+bincode = "1.3"
+ahash = "0.7"
+hashbrown = "0.11"
+futures = "0.3"
+parking_lot = "0.11"
+tracing = "0.1"
+num_cpus = "1.0"
+tokio = { version =  "1.0", features = ["rt"] }
 
 [workspace]
-members = ["dummy", "cli", "goods"]
+members = ["dummy", "cli", "treasury"]
