--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,13 @@ name = "goods"
 version = "0.9.0"
 authors = ["Zakarum <zakarumych@ya.ru>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT OR Apache-2.0"
+documentation = "https://docs.rs/goods"
+homepage = "https://github.com/zaq/goods"
+repository = "https://github.com/zaq/goods"
 
 [dependencies]
+goods-proc = { version = "=0.1.0", path = "proc" }
 treasury = { version = "0.1.0", path = "treasury" }
 uuid = "0.8"
 thiserror = "1.0"
