--- a/proc/Cargo.toml
+++ b/proc/Cargo.toml
@@ -13,5 +13,5 @@ proc-macro = true
 
 [dependencies]
 proc-macro2 = "1.0"
-syn = { version = "1.0", features = ["full", "extra-traits"] }
+syn = { version = "1.0", features = ["derive"] }
 quote = "1.0"
