--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ futures = "0.3"
 parking_lot = "0.11"
 tracing = "0.1"
 num_cpus = "1.0"
-tokio = { version =  "1.0", features = ["rt"] }
+tokio = { version =  "1.0", features = ["rt", "sync", "parking_lot"] }
 
 [workspace]
 members = ["dummy", "cli", "treasury"]
