--- a/treasury/Cargo.toml
+++ b/treasury/Cargo.toml
@@ -16,6 +16,5 @@ serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 thiserror = "1.0"
 eyre = "0.6"
-
-wasmer = "1.0"
-wasmer-wasi = "1.0"
+wasmer = { version = "1.0", default-features = false, features = ["default-jit", "default-cranelift"] }
+wasmer-wasi = { version = "1.0", default-features = false }
