--- a/treasury/Cargo.toml
+++ b/treasury/Cargo.toml
@@ -9,7 +9,7 @@ homepage = "https://github.com/zaq/treasury"
 repository = "https://github.com/zaq/treasury"
 
 [dependencies]
-treasury-import = { version = "=0.1.0", path = "../import" }
+treasury-import = { version = "=0.1.0", path = "../import", default-features = false }
 tracing = { version = "0.1", features = ["attributes"] }
 uuid = { version = "0.8", features = ["v4", "serde"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
