--- a/proc/Cargo.toml
+++ b/proc/Cargo.toml
@@ -5,8 +5,10 @@ authors = ["Zakarum <zakarumych@ya.ru>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
 documentation = "https://docs.rs/goods-proc"
-homepage = "https://github.com/zaq/goods-proc"
-repository = "https://github.com/zaq/goods-proc"
+homepage = "https://github.com/zakarumych/goods-proc"
+repository = "https://github.com/zakarumych/goods-proc"
+description = "Proc-macro for \"goods\" crate"
+keywords = ["macro", "derive"]
 
 [lib]
 proc-macro = true
