Split importer FFI and API into two crates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ fetch-reimport = ["goods-treasury/import"]
 
 [dependencies]
 goods-proc = { version = "=0.1.0", path = "proc" }
-goods-treasury = { version = "0.2.0", path = "treasury" }
+goods-treasury = { version = "0.3.0", path = "treasury" }
 uuid = "0.8"
 thiserror = "1.0"
 serde = "1.0"
@@ -32,4 +32,4 @@ num_cpus = "1.0"
 tokio = { version =  "1.0", features = ["rt", "sync", "parking_lot"] }
 
 [workspace]
-members = ["cli", "treasury", "import"]
+members = ["cli", "treasury", "import", "import/ffi"]
