--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Zakarum <zakarumych@ya.ru>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
 documentation = "https://docs.rs/goods"
-homepage = "https://github.com/zakarumych/goods"
-repository = "https://github.com/zakarumych/goods"
+homepage = "https://github.com/arcana-engine/goods"
+repository = "https://github.com/arcana-engine/goods"
 description = "Asset pipeline complete with loader, database, importing plugins and procedural macros for asset definition from user-types"
 keywords = ["async", "asset", "macro", "derive"]
 categories = ["asynchronous", "game-development"]
