--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2018"
 authors = ["Zakarum <zakarumych@ya.ru>"]
 license = "MIT OR Apache-2.0"
 documentation = "https://docs.rs/treasury"
-homepage = "https://github.com/zakarumych/treasury"
-repository = "https://github.com/zakarumych/treasury"
+homepage = "https://github.com/arcana-engine/treasury"
+repository = "https://github.com/arcana-engine/treasury"
 description = "CLI tool for \"Treasury\""
 keywords = ["asset", "cli"]
 categories = ["command-line-interface", "game-development"]
