--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,27 +1,26 @@
 [package]
 name = "goods"
-version = "0.11.1"
+version = "0.12.0"
 authors = ["Zakarum <zakarumych@ya.ru>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
 documentation = "https://docs.rs/goods"
 homepage = "https://github.com/arcana-engine/goods"
 repository = "https://github.com/arcana-engine/goods"
-description = "Asset pipeline complete with loader, database, importing plugins and procedural macros for asset definition from user-types"
-keywords = ["async", "asset", "macro", "derive"]
+description = "Async assets system"
+keywords = ["async", "assets", "macro", "derive"]
 categories = ["asynchronous", "game-development"]
 
 [features]
-fetch-reimport = ["goods-treasury/import"]
+treasury = ["treasury-client", "eyre", "url", "dunce"]
 
 [dependencies]
 goods-proc = { version = "=0.1.0", path = "proc" }
-goods-treasury = { version = "0.3.0", path = "treasury" }
-uuid = "0.8"
+treasury-client = { version = "0.0.0", optional = true, git = "https://github.com/arcana-engine/treasury.git" }
 thiserror = "1.0"
+smallvec = "1.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-ron = "0.6"
 bincode = "1.3"
 ahash = "0.7"
 hashbrown = "0.11"
@@ -30,6 +29,8 @@ parking_lot = "0.11"
 tracing = "0.1"
 num_cpus = "1.0"
 tokio = { version =  "1.0", features = ["rt", "sync", "parking_lot"] }
+eyre = { version = "0.6", optional = true }
+url = { version = "2.2", optional = true }
+dunce =  { version = "1.0", optional = true }
 
 [workspace]
-members = ["cli", "treasury", "import", "import/ffi"]
